# telnet_client

./: CMakeLists.txt  README.md  telnet_client.cpp  telnet_client.h
lib/libtelnet/: CMakeLists.txt
test/: connection.cpp
